--- a/DataCleaning.ipynb
+++ b/DataCleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -234,7 +234,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BOROUGH                            345059\n",
+       "NEIGHBORHOOD                       345059\n",
+       "BUILDING CLASS CATEGORY            345059\n",
+       "TAX CLASS AS OF FINAL ROLL         341199\n",
+       "BLOCK                              345059\n",
+       "LOT                                345059\n",
+       "EASE-MENT                               0\n",
+       "BUILDING CLASS AS OF FINAL ROLL    341199\n",
+       "ADDRESS                            345059\n",
+       "APARTMENT NUMBER                    74790\n",
+       "ZIP CODE                           345044\n",
+       "RESIDENTIAL UNITS                  329081\n",
+       "COMMERCIAL UNITS                   329081\n",
+       "TOTAL UNITS                        329081\n",
+       "LAND SQUARE FEET                   329079\n",
+       "GROSS SQUARE FEET                  329082\n",
+       "YEAR BUILT                         339532\n",
+       "TAX CLASS AT TIME OF SALE          345059\n",
+       "BUILDING CLASS AT TIME OF SALE     345059\n",
+       "SALE PRICE                         345059\n",
+       "SALE DATE                          345059\n",
+       "Latitude                           334109\n",
+       "Longitude                          334109\n",
+       "Community Board                    334109\n",
+       "Council District                   334109\n",
+       "Census Tract                       334109\n",
+       "BIN                                332909\n",
+       "BBL                                332909\n",
+       "NTA                                334109\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +514,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -670,7 +719,7 @@
        "4           0 2016-01-01  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,18 +741,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jihyechoi/opt/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3058: DtypeWarning: Columns (11,13) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
     "data_out = pd.read_csv(\"data/out.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +791,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -958,7 +1016,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1258,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -1405,7 +1463,7 @@
        "8            0 2020-04-06  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1417,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1427,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1522,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1475,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1724,7 @@
        "8          0 2020-04-06  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1677,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1686,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1883,7 +1941,7 @@
        "4          0  2020-04-06  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1895,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1923,7 +1981,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1934,55 +1992,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CombinedData.dropna(subset = [\"YEAR BUILT\"], inplace=True)"
+    "# CombinedData.dropna(subset = [\"YEAR BUILT\"], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Unnamed: 0                        339226\n",
-       "BOROUGH                           339226\n",
-       "NEIGHBORHOOD                      339226\n",
-       "BUILDING CLASS CATEGORY           339226\n",
-       "BLOCK                             339226\n",
-       "LOT                               339226\n",
-       "ADDRESS                           339226\n",
-       "APARTMENT NUMBER                   71373\n",
-       "ZIP CODE                          339226\n",
-       "RESIDENTIAL UNITS                 339226\n",
-       "COMMERCIAL UNITS                  339226\n",
-       "TOTAL UNITS                       339226\n",
-       "LAND SQUARE FEET                  339226\n",
-       "GROSS SQUARE FEET                 339226\n",
-       "YEAR BUILT                        339226\n",
-       "TAX CLASS AT TIME OF SALE         339226\n",
-       "BUILDING CLASS AT TIME OF SALE    339226\n",
-       "SALE PRICE                        339226\n",
-       "SALEDATE                          339226\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "CombinedData.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2167,7 +2186,7 @@
        "4  2020-04-06  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2179,7 +2198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -2187,10 +2206,10 @@
     {
      "data": {
       "text/plain": [
-       "2791"
+       "2828"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2201,7 +2220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2210,7 +2229,7 @@
        "0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2222,33 +2241,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "BOROUGH                           336435\n",
-       "NEIGHBORHOOD                      336435\n",
-       "BUILDING CLASS CATEGORY           336435\n",
-       "BLOCK                             336435\n",
-       "LOT                               336435\n",
-       "ADDRESS                           336435\n",
-       "ZIP CODE                          336435\n",
-       "RESIDENTIAL UNITS                 336435\n",
-       "COMMERCIAL UNITS                  336435\n",
-       "TOTAL UNITS                       336435\n",
-       "LAND SQUARE FEET                  336435\n",
-       "GROSS SQUARE FEET                 336435\n",
-       "YEAR BUILT                        336435\n",
-       "TAX CLASS AT TIME OF SALE         336435\n",
-       "BUILDING CLASS AT TIME OF SALE    336435\n",
-       "SALE PRICE                        336435\n",
-       "SALEDATE                          336435\n",
+       "BOROUGH                           370351\n",
+       "NEIGHBORHOOD                      370351\n",
+       "BUILDING CLASS CATEGORY           370351\n",
+       "BLOCK                             370351\n",
+       "LOT                               370351\n",
+       "ADDRESS                           370351\n",
+       "ZIP CODE                          370336\n",
+       "RESIDENTIAL UNITS                 347950\n",
+       "COMMERCIAL UNITS                  342918\n",
+       "TOTAL UNITS                       348680\n",
+       "LAND SQUARE FEET                  342186\n",
+       "GROSS SQUARE FEET                 342189\n",
+       "YEAR BUILT                        362863\n",
+       "TAX CLASS AT TIME OF SALE         370351\n",
+       "BUILDING CLASS AT TIME OF SALE    370351\n",
+       "SALE PRICE                        370351\n",
+       "SALEDATE                          370351\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2259,7 +2278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2268,7 +2287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2461,7 +2480,7 @@
        "4  2020-04-06  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2470,6 +2489,13 @@
     "FinalCombinedData1 = pd.read_csv(\"data/FinalCombinedData.csv\")\n",
     "FinalCombinedData1.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
